# hmmm

./: LICENSE  README.md
calc/: .gitignore  Makefile  codegen.cpp  codegen.h  codescope.cpp  codescope.h  hm.h  kaleidoscope.cpp  lexer.l  main.cpp  node.cpp  node.h  number.cpp  number.h  parser.y  playground.cpp
madoka/: .gitignore  Makefile
madoka/src/: codegen.cpp  codegen.h  codescope.cpp  hm.cpp  hm.h  lexer.l  main.cpp  node.cpp  node.h  number.cpp  number.h  parser.y  playground.cpp
midori/: CMakeLists.txt  Makefile
midori/src/: CMakeLists.txt  finite_automata.h  generator.cpp  generator.h  global.h  helper.h  interval_tree.h  interval_tree.impl.h  lexer.cpp  main.cpp  parser.cpp  parser.h  parser.txt  program.txt  regex.cpp  regex.h  regex_old.h
midori/src/midori/: CMakeLists.txt  codegen.cpp  codegen.h  finite_automata.cpp  finite_automata.h  generator.cpp  generator.h  global.h  glr.cpp  glr.h  interval_tree.h  interval_tree.impl.h  lang.cpp  lang.h  lexer.cpp  lexer.h  parser.cpp  parser.h  regex.cpp  regex.h  regex_ast.cpp  regex_ast.h  regex_engine.cpp  regex_engine.h  type_checker.cpp  type_checker.h  types.cpp  types.h  utf8.h
midori/tests/: CMakeLists.txt  CMakeLists.txt.in  driver.cpp  finite_automata.cpp  interval_tree.cpp  lexer.cpp  parser.cpp  regex.cpp  regex_ast.cpp  regex_engine.cpp  utf8.cpp
primed/: Makefile
primed/src/: dfa.cpp  dfa.h  driver.cpp  finite_automata.cpp  finite_automata.h  lexer.cpp  lexer.h  parser.cpp  parser.h  regex.cpp  regex.h  types.h
rpn_calc/: .gitignore  Makefile  expression.c  expression.cpp  expression.h  lexer.l  main.c  number.h  parser.y
sayaka/: .gitignore  Makefile  test_script.txt
sayaka/src/: ast_node.cpp  ast_node.h  ast_node_assignment.cpp  ast_node_assignment.h  ast_node_binaryoperator.cpp  ast_node_binaryoperator.h  ast_node_block.cpp  ast_node_block.h  ast_node_cast.cpp  ast_node_cast.h  ast_node_declaration.cpp  ast_node_declaration.h  ast_node_function.cpp  ast_node_function.h  ast_node_functioncall.cpp  ast_node_functionprototype.cpp  ast_node_identifier.cpp  ast_node_identifier.h  ast_node_ifelse.cpp  ast_node_primitive.cpp  ast_node_primitive.h  ast_type.cpp  ast_type.h  ast_types_resolver.cpp  ast_types_resolver.h  code_gen.cpp  code_gen.h  code_gen_context.cpp  code_gen_context.h  codegen.cpp  codegen.h  codescope.cpp  (+13 more)
siyu/: Makefile
tk/: Makefile
(+32 files in other folders)
